test/analyzer/inputs/invalid/type-mismatch.yah
<<<<<<< HEAD
dog::int is "hello"
=======
dog::int is "hello"
>>>>>>> 44f7c7559c324bea9831b50e98543dc421bfd25b
